<resources>
    <string name="app_name">Laboratory Task 1</string>
    <string name="welcome_to_android_ui">Welcome to Android UI</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="edit_text">Edit Text</string>
    <string name="text">Text</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="fruits">Fruits?</string>
    <string name="Fruits" />
    <string name="try_typing_bananas">Try typing bananas</string>
    <string name="fruit">Fruits</string>
    <string name="login">Login</string>
    <string name="see_password">See Password</string>
    <string name="togglegear">ToggleGear</string>
    <string name="geartoggle">gearToggle</string>
    <string name="displaypicture">DisplayPicture</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string-array name="simple_options">
        <item>Gears</item>
        <item>Sword</item>
        <item>Bow</item>
        <item>Staff</item>
        <item>Dagger</item>
        <item>Stave</item>
    </string-array>
</resources>